--- a/views/index.html
+++ b/views/index.html
@@ -15,25 +15,28 @@
         <div class="panel-body" id="options-panel">
           <div>
             <h4>Hotels</h4>
-            <select data-type="hotel" id="hotel-choices">
-              <option>Andaz Wall Street</option>
-              <option>...</option>
+            <select data-type="hotel" id="hotel-choices" class="current-choice">
+               {% for hotel in hotels %}
+              <option value='{{hotel.id}}'>{{hotel.name}}</option>
+              {% endfor %} 
             </select>
             <button data-action="add" class="btn btn-primary btn-circle pull-right">+</button>
           </div>
           <div>
             <h4>Restaurants</h4>
-            <select data-type="restaurant" id="restaurant-choices">
-              <option>Bouley</option>
-              <option>...</option>
+            <select data-type="restaurant" id="restaurant-choices" class="current-choice">
+              {% for restaurant in restaurants %}
+              <option id='{{restaurant.id}}'>{{restaurant.name}}</option>
+              {% endfor %} 
             </select>
             <button data-action="add" class="btn btn-primary btn-circle pull-right">+</button>
           </div>
           <div>
             <h4>Activities</h4>
-            <select data-type="activity" id="activity-choices">
-              <option>Mahayana Buddhist Temple Association</option>
-              <option>...</option>
+            <select data-type="activity" id="activity-choices" class="current-choice">
+               {% for activity in activities %}
+              <option id='{{activity.id}}'>{{activity.name}}</option>
+              {% endfor %} 
             </select>
             <button data-action="add" class="btn btn-primary btn-circle pull-right">+</button>
           </div>
@@ -42,45 +45,36 @@
     </div>
     <div class="col-xs-6 col-sm-12">
       <h3>
-        <span id="day-title">
-          <span>Day 2</span>
-          <button class="btn btn-xs btn-danger remove btn-circle">x</button>
-        </span>
       </h3>
       <div class="panel panel-default">
         <div class="panel-heading">
-          <div class="day-buttons">
-            <button class="btn btn-circle day-btn">1</button>
-            <button class="btn btn-circle day-btn current-day">2</button>
-            <button class="btn btn-circle day-btn">3</button>
-            <button class="btn btn-circle day-btn" id="day-add">+</button>
+          <div class="day header">
+            <button data-action = "deleteday" class ="btn btn-square" id="daydelete">Day 1 X<btn>
           </div>
+          <div class="day-buttons">
+            <button data-action = "switchdays" class="btn btn-circle day-btn" id="day1">1</button>
+            <button data-action="dayadd" class="btn btn-day btn-circle">+</button>
         </div>
+
         <div class="panel-body" id="itinerary">
           <div>
             <h4>My Hotel</h4>
-            <ul class="list-group">
-              <div class="itinerary-item">
-                <span class="title">Andaz Wall Street</span>
-                <button class="btn btn-xs btn-danger remove btn-circle">x</button>
+            <ul class="list-group-hotel">
+              <div>
               </div>
             </ul>
           </div>
           <div>
             <h4>My Restaurants</h4>
-            <ul class="list-group">
-              <div class="itinerary-item">
-                <span class="title">Bouley</span>
-                <button class="btn btn-xs btn-danger remove btn-circle">x</button>
+            <ul class="list-group-restaurant">
+              <div>
               </div>
             </ul>
           </div>
           <div>
             <h4>My Activities</h4>
-            <ul class="list-group">
-              <div class="itinerary-item">
-                <span class="title">Mahayana Buddhist Temple Association</span>
-                <button class="btn btn-xs btn-danger remove btn-circle">x</button>
+            <ul class="list-group-activity">
+                <div>
               </div>
             </ul>
           </div>
@@ -89,7 +83,6 @@
     </div>
   </div>
 </div>
-{% endblock %}
 
 <script>
   {% autoescape false %}
@@ -98,3 +91,4 @@
   var activities = {{ activities | json }};
   {% endautoescape %}
 </script>
+{% endblock %}
